# fasr-array-config-simul

./: .gitignore  FASR-A_selfcalibration_quietsun.ipynb  FASR_array_configuration_bc.ipynb  FASR_array_performance_quietsun.ipynb  arrayconfig.ipynb  compare_arrayconfig_quietsun.ipynb  fasr-a_random_spiral_hybrid_120.001.cfg  fasr-a_random_spiral_hybrid_120.cfg  fasr-a_random_spiral_hybrid_78.cfg  fasr-a_random_spiral_hybrid_outriggers_104.cfg  fasr-b_spiral_72.cfg  fasr_solar_simul.py  fig_spiral_90_diff_k_compare.key  setup.cfg
.ipynb_checkpoints/: FASR-A_selfcalibration_quietsun-checkpoint.ipynb  FASR_array_configuration_bc-checkpoint.ipynb  FASR_array_performance_quietsun-checkpoint.ipynb  arrayconfig-checkpoint.ipynb
FASR-A/caltbs/caltb_FASR_corrupt_100pct.amp/: table.f0i
FASR-A/caltbs/caltb_FASR_corrupt_10pct.amp/: table.f0i
FASR-A/caltbs/caltb_FASR_corrupt_10pct.amp/OBSERVATION/: table.f0
FASR-A/caltbs/caltb_FASR_corrupt_18deg.ph/: table.f0i
FASR-A/caltbs/caltb_FASR_corrupt_20pct.amp/: table.f0i
FASR-A/caltbs/caltb_FASR_corrupt_360deg.ph/: table.f0  table.f0i
FASR-A/caltbs/caltb_FASR_corrupt_36deg.ph/: table.f0i
FASR-A/caltbs/caltb_FASR_corrupt_6deg.ph/: table.f0i
FASR-B/caltbs/caltb_FASR_corrupt_0deg.ph/: table.f0  table.f0i
FASR-B/msfiles/Quiet_Sun/: psi_solar_disk_model_20201126.0.20GHz.fits  psi_solar_disk_model_20201126.0.40GHz.fits  psi_solar_disk_model_20201126.1.00GHz.fits  psi_solar_disk_model_20201126.1.59GHz.fits  psi_solar_disk_model_20201126.2.00GHz.fits
TempLattice76121_583/: table.f0
(+539 files in other folders)
