[metadata]
name = fasr-array-config-simul
version = 0.0.0
author = Sijie Yu
author_email = sijie.yu@njit.edu
description = FASR array configuration simulations
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.10
py_modules = fasr_solar_simul
install_requires =
    astropy
    casatools
    matplotlib
    numpy
    scipy
    sunpy
